[package]
name = "binding-helpers"
version = "0.3.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sgrif/mysqlclient-sys"
edition = "2018"

[dependencies]
pkg-config = "0.3.9"
bindgen = "0.54.0"

[target.'cfg(target_env = "msvc")'.dependencies]
vcpkg = "0.2.4"
